# app/api/controllers/employee.js
@@ -32,30 +32,23 @@ var GetEmployeeById = function(req,res,next){
 
 }
 
-var CreateEmployee = function(req,res,next){
-    console.log(req.body)
-
-    employeeModel.create(req.body,function(err,employee){
-        
+var CreateEmployee = function(req,res,next){;
+    employeeModel.create(req.body,function(err,employee){        
         if(err)
             next(err);
         else
         res.json({status:"success", message: "Employee Created!!!", data:null});
-    })
-    
+    })    
 }
 
 var UpdateEmployee = function(req,res,next){
-    
-    console.log(req.params.id)
-    //console.log(req.body)
-    res.json({status:"success", message: "Employee UPdated!!!", data:null});
-    // employeeModel.findByIdAndUpdate(req.params.id,req.body,function(err,employee){
-    //     if(err)
-    //         next(err);
-    //     else
-    //     res.json({status:"success", message: "Employee Updated!!!", data:null});
-    // })
+   
+    employeeModel.findByIdAndUpdate(req.params.id,req.body,function(err,employee){
+        if(err)
+            next(err);
+        else
+        res.json({status:"success", message: "Employee Updated!!!", data:null});
+    })
 }
 
 var DeleteEmployee = function(req,res,next){
