# app/swagger.json
@@ -326,7 +326,15 @@
         ],
         "produces": [
           "application/json"
-        ]
+        ],
+        "responses": {
+          "200": {
+            "description": "EMployee is crreated",
+            "schema": {
+              "$ref": "#/definitions/EMployee"
+            }
+          }
+        }
       }
     },
     "employee/{id}" :{
